--- a/yiyan/Demo/GHSidebarNav-Info.plist
+++ b/yiyan/Demo/GHSidebarNav-Info.plist
@@ -9,21 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFiles</key>
-	<array>
-		<string>icon.png</string>
-		<string>icon@2x.png</string>
-	</array>
-	<key>CFBundleIcons</key>
-	<dict>
-		<key>CFBundlePrimaryIcon</key>
-		<dict>
-			<key>CFBundleIconFiles</key>
-			<array>
-				<string>icon.png</string>
-				<string>icon@2x.png</string>
-			</array>
-		</dict>
-	</dict>
+	<array/>
 	<key>CFBundleIdentifier</key>
 	<string>com.theindex.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -33,11 +19,11 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.14</string>
+	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>GREG</string>
 	<key>CFBundleVersion</key>
-	<string>1.1.4</string>
+	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIRequiredDeviceCapabilities</key>
